Prevent scrollbar layout shift

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,11 +7,12 @@ body,
 #app {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .btn {
-  @apply px-4 py-1 rounded inline-block
-    bg-teal-600 text-white cursor-pointer
+  @apply inline-block cursor-pointer rounded bg-teal-600
+    px-4 py-1 text-white
     hover:bg-teal-700
     disabled:cursor-default disabled:bg-gray-600 disabled:opacity-50;
 }
@@ -19,6 +20,6 @@ body,
 .icon-btn {
   @apply inline-block cursor-pointer select-none
     opacity-75 transition duration-200 ease-in-out
-    hover:opacity-100 hover:text-teal-600;
+    hover:text-teal-600 hover:opacity-100;
   font-size: 0.9em;
 }
